fixed firefox scrollbar bug

--- a/2.0/css/style.css
+++ b/2.0/css/style.css
@@ -37,7 +37,7 @@ h2{
   color: #333;
   background: rgba(255, 255, 255, 0.9);
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .container{
